Kubernetes/02-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres      
spec:
  ports:
  - port: 5432 
  selector:
    app: postgres   
  clusterIP: None    

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: "postgres"
  replicas: 1          
  selector:
    matchLabels:
      app: postgres     
  template:
    metadata:
      labels:
        app: postgres   
    spec:
      containers:
      - name: postgres
        image: postgres:14  
        volumeMounts:      
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data 
  volumeClaimTemplates:     
  - metadata:
      name: postgres-storage
    spec:
      accessModes: [ "ReadWriteOnce" ] 
      resources:
        requests:
          storage: 1Gi
