Kubernetes/03-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis             
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379          
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment          
metadata:
  name: redis
spec:
  replicas: 1             
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7-alpine  
        resources:             
          requests:
            cpu: "100m"        
            memory: "128Mi"    
          limits:
            cpu: "500m"        
            memory: "256Mi"    
        ports:
        - containerPort: 6379
        command: ["redis-server", "--requirepass", "$(REDIS_PASSWORD)"]
