Kubernetes/05-ingress.yaml
apiVersion: networking.k8s.io/v1    
kind: Ingress                       
metadata:
  name: app-ingress                 
  annotations:                      
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx           
  rules:                            
  - host: challenge.local           
    http:
      paths:
      - path: /                     
        pathType: Prefix
        backend:                    
          service:
            name: main-app          
            port:
              number: 80
